--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.11.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.10.2",
     "react-router-dom": "^6.23.0",
     "sass": "^1.75.0",
     "swiper": "^11.1.1",
